# smial

./: .gitignore  CMakeLists.txt  PORTING.md  PROTOCOL.md  README.md  q1config.html  q1config.py  requirements.txt  smial.html  smial.py
.github/workflows/: pages.yml  release.yml
firmware/: README.md
fonts/: embed_ttf.py  inter_regular.inl  jetbrains_mono.inl
presets/: mine.json  preset.json  test.json
src/: cli.cpp  cli.h  gui.cpp  gui.h  hid.cpp  hid.h  keycodes.cpp  keycodes.h  layout.cpp  layout.h  main.cpp  preset.cpp  preset.h  protocol.cpp  protocol.h
